--- a/_drafts/2018-05-15-webpack.md
+++ b/_drafts/2018-05-15-webpack.md
@@ -8,6 +8,8 @@
 
 `npm install --save-dev webpack-dev-server`
 
+`npm install --save-dev webpack-node-externals`
+
 ## Configuration
 
 ### webpack.config.js file
