--- a/_posts/2018-04-03-React-UI.md
+++ b/_posts/2018-04-03-React-UI.md
@@ -9,9 +9,37 @@ tags: [React, MERN]
 
 # React UI
 
+There are many great React UI libraries:
+
+- [Material UI](https://material-ui.com/)
+- [React Bootstrap](https://react-bootstrap.github.io/)
+- [Semantic UI React](https://react.semantic-ui.com/)
+- [Blueprint](https://blueprintjs.com/)
+- ...
+
 ## Semantic UI React
 
 [Semantic UI React](https://react.semantic-ui.com/) is the official React integration for [Semantic UI](https://semantic-ui.com/).
+
+It's vary developer friendly for creating some prototypes. With react-router, the code is very declarative.
+
+```html
+<Router>
+  <div>
+    <menu>
+      <Menu.Item as="{Link}" to="/">
+        Home
+      </Menu.Item>
+      <Menu.Item as="{Link}" to="/samples">
+        Samples
+      </Menu.Item>
+    </menu>
+
+    <Route exact path="/" component="{Home}" />
+    <Route path="/samples" component="{SamplePageNav}" />
+  </div>
+</Router>
+```
 
 Install it first
 
@@ -27,3 +55,7 @@ Use CDN
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-react/0.85.0/semantic-ui-react.min.js"></script>
 ```
+
+## Resources
+
+[23 react ui component libraries and frameworks](https://hackernoon.com/23-best-react-ui-component-libraries-and-frameworks-250a81b2ac42)
