--- a/_posts/2018-04-11-React-UI.md
+++ b/_posts/2018-04-11-React-UI.md
@@ -21,7 +21,7 @@ There are many great React UI libraries:
 
 [Semantic UI React](https://react.semantic-ui.com/) is the official React integration for [Semantic UI](https://semantic-ui.com/).
 
-It's vary developer friendly for creating some prototypes. With react-router, the code is very declarative.
+It's very developer friendly for creating some prototypes. With react-router, the code is very declarative.
 
 ```html
 <Router>
