--- a/_posts/2018-04-11-React-UI.md
+++ b/_posts/2018-04-11-React-UI.md
@@ -59,3 +59,5 @@ Use CDN
 ## Resources
 
 [23 react ui component libraries and frameworks](https://hackernoon.com/23-best-react-ui-component-libraries-and-frameworks-250a81b2ac42)
+
+[creating a responsive grid in react](https://www.telerik.com/blogs/creating-a-responsive-grid-in-react)
