--- a/_drafts/2017-12-01-MongoDB.md
+++ b/_drafts/2017-12-01-MongoDB.md
@@ -9,3 +9,7 @@ By default localhost:27017
 ## Resources
 
 [Official Documentation](https://docs.mongodb.com/)
+
+[Tutorials](http://mongodb.github.io/node-mongodb-native/3.1/tutorials/main/)
+
+[Quick Start](http://mongodb.github.io/node-mongodb-native/3.1/quick-start/quick-start/)
