--- a/_drafts/2017-09-01-NPM.md
+++ b/_drafts/2017-09-01-NPM.md
@@ -1,8 +1,12 @@
 # npm
 
+The JavaScript ecosystem provides many great libraries and tools to make writing applications faster and easier for developers. Most of them are managed in npm.
+
 [Official](https://www.npmjs.com)
 
 [Docs](https://docs.npmjs.com)
+
+[Getting Started](https://docs.npmjs.com/getting-started/)
 
 [Blog](https://blog.npmjs.org)
 
@@ -33,13 +37,15 @@ To upgrade npm to the latest, use the following:
 init
 `npm init`
 
+### Install
+
 `npm install --save-dev browserify`
 
 -g global
 
---save-dev is used to save the package for development purpose. Example: unit tests, minification.
+--save-dev is used to save the package for development purpose. Example: unit tests, minification. devDependencies includes build tools such as Babel and webpack. Packages in the devDependencies section of package.json don't get installed when the NODE_ENV variable is set to production.
 
---save is used to save the package required for the application to run.
+--save is used to save the package required for the application to run. dependencies include any libraries that are required to run the application.
 
 -D is short for --save-dev and -S is short for --save
 
