--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -97,15 +97,15 @@ Check the current version
 #### HTTP Server
 
 ```js
-const http = require("http");
+const http = require('http');
 
-const hostname = "127.0.0.1";
+const hostname = '127.0.0.1';
 const port = 3000;
 
 const server = http.createServer((req, res) => {
   res.statusCode = 200;
-  res.setHeader("Content-Type", "text/plain");
-  res.end("Hello World\n");
+  res.setHeader('Content-Type', 'text/plain');
+  res.end('Hello World\n');
 });
 
 server.listen(port, hostname, () => {
@@ -148,6 +148,8 @@ console.log()
 [Performance](https://devdocs.io/node/perf_hooks#perf_hooks_class_performance)
 
 ## Resources
+
+[socket.io](https://socket.io/#examples)
 
 ### Documentation
 
