--- a/_drafts/2017-12-01-MongoDB.md
+++ b/_drafts/2017-12-01-MongoDB.md
@@ -6,6 +6,14 @@
 
 By default localhost:27017
 
+## mongoose
+
+[mongoose](https://mongoosejs.com/docs/)
+
+## monk
+
+[monk getting started](https://automattic.github.io/monk/docs/GETTING_STARTED.html)
+
 ## Resources
 
 [Official Documentation](https://docs.mongodb.com/)
