--- a/_drafts/2018-05-15-webpack.md
+++ b/_drafts/2018-05-15-webpack.md
@@ -1,30 +1,68 @@
 # webpack
 
+> At its core, webpack is a static module bundler for modern JavaScript applications. When webpack processes your application, it internally builds a dependency graph which maps every module your project needs and generates one or more bundles.
+
+[Concepts](https://webpack.js.org/concepts/)
+
+[Guides](https://webpack.js.org/guides)
+
 ## Install
+
+make sure npm is initialized or packages.json is ready.
 
 `npm install --save-dev webpack`
 
 `npm install --save-dev webpack-cli`
 
-`npm install --save-dev webpack-dev-server`
-
 `npm install --save-dev webpack-node-externals`
 
-## Configuration
-
-### webpack.config.js file
-
-## Tools
-
-### webpack-dev-server
+## webpack-dev-server
 
 [webpack-dev-server](https://github.com/webpack/webpack-dev-server)
 
 `npm install webpack-dev-server --save-dev`
 
+To start the server:
+
+`node_modules\.bin\webpack-dev-server` or `npx webpack-dev-server`
+
+Or add `"start": "webpack-dev-server --open",` in package.json
+
+```js
+{
+    "scripts": {
+        "start": "webpack-dev-server --open",
+        "build": "webpack --config webpack.config.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+  }
+}
+```
+
+in webpack.config.js file to specify the devServer contentBase
+
+```js
+module.exports = {
+  devServer: {
+    contentBase: './dist'
+  }
+};
+```
+
+now `npm start` will launch the webpack-dev-server.
+
 `webpack-dev-server --hot --inline`
 
-`node_modules\.bin\webpack-dev-server`
+## webpack.config.js file
+
+## Loaders
+
+`npm install --save-dev style-loader css-loader`
+
+`npm install --save-dev file-loader`
+
+`npm install --save-dev csv-loader xml-loader`
+
+`https://github.com/petehunt/webpack-howto`
 
 ## TypeScript Support
 
@@ -39,7 +77,5 @@
 [awesome-typescript-loader](https://www.npmjs.com/package/awesome-typescript-loader)
 
 ## Resources
-
-[webpack](https://webpack.js.org/concepts/)
 
 [transpiling-bundling-javascript-webpack](https://app.pluralsight.com/library/courses/transpiling-bundling-javascript-webpack/)
