--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -159,6 +159,8 @@ console.log()
 
 [github source code](https://github.com/nodejs)
 
+[chapter in eloquent javascript book](https://eloquentjavascript.net/20_node.html)
+
 ### Tutorials
 
 [nodejs-tutorials](http://www.tutorialsteacher.com/nodejs/nodejs-tutorials)
