--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -30,6 +30,10 @@ Check the current version
 
 [repl](https://devdocs.io/node/repl)
 
+`node`
+
+`process.exit(0)`
+
 ## modules
 
 [modules](https://devdocs.io/node/modules)
