--- a/_drafts/2017-09-01-NPM.md
+++ b/_drafts/2017-09-01-NPM.md
@@ -35,7 +35,9 @@ To upgrade npm to the latest, use the following:
 `npm set strict-ssl false`
 
 init
-`npm init`
+`npm init` will prompt you for the options and create the package.json file based on your input.
+
+`npm init -yes` will not prompt for options and use the defaults.
 
 ### Install
 
