--- a/_drafts/2018-05-15-webpack.md
+++ b/_drafts/2018-05-15-webpack.md
@@ -16,45 +16,64 @@ make sure npm is initialized or packages.json is ready.
 
 `npm install --save-dev webpack-node-externals`
 
-## webpack-dev-server
+## CLI
 
-[webpack-dev-server](https://github.com/webpack/webpack-dev-server)
+`npx webpack` for building for development environment.
 
-`npm install webpack-dev-server --save-dev`
+`npx webpack -p` for building for production environment.
 
-To start the server:
+## webpack.config.js
 
-`node_modules\.bin\webpack-dev-server` or `npx webpack-dev-server`
+If you don't specify a config file, webpack.config.js will be used.
 
-Or add `"start": "webpack-dev-server --open",` in package.json
+`npx webpack --config webpack.config.js`
 
-```js
-{
-    "scripts": {
-        "start": "webpack-dev-server --open",
-        "build": "webpack --config webpack.config.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-  }
-}
-```
-
-in webpack.config.js file to specify the devServer contentBase
+a typical config.js file looks like:
 
 ```js
+'use strict';
+
+const webpack = require('webpack');
+const path = require('path');
+
 module.exports = {
-  devServer: {
-    contentBase: './dist'
-  }
+  entry: './src/index.js',
+
+  mode: 'development',
+
+  output: {
+    path: path.resolve(__dirname, 'build'),
+    publicPath: '/build/',
+    filename: 'project.bundle.js'
+  },
+
+  module: {
+    rules: [
+      {
+        test: [/\.vert$/, /\.frag$/],
+        use: 'raw-loader'
+      }
+    ]
+  },
+
+  plugins: [
+    new webpack.DefinePlugin({
+      CANVAS_RENDERER: JSON.stringify(true),
+      WEBGL_RENDERER: JSON.stringify(true)
+    })
+  ]
 };
 ```
 
-now `npm start` will launch the webpack-dev-server.
+### Environment
 
-`webpack-dev-server --hot --inline`
+mode option in webpack.config.js file.
 
-`"dev": "webpack-dev-server --inline --content-base ./public --open",`
+`mode: 'development',`
 
-## webpack.config.js file
+If the 'mode' option is not set, webpack will fallback to 'production' for this value.
+
+use `webpack.development.config.js` or `webpack.production.config.js` for building in different environments.
 
 ## Loaders
 
@@ -79,5 +98,7 @@ now `npm start` will launch the webpack-dev-server.
 [awesome-typescript-loader](https://www.npmjs.com/package/awesome-typescript-loader)
 
 ## Resources
+
+[Official](https://webpack.js.org)
 
 [transpiling-bundling-javascript-webpack](https://app.pluralsight.com/library/courses/transpiling-bundling-javascript-webpack/)
