--- a/_drafts/2018-05-15-webpack.md
+++ b/_drafts/2018-05-15-webpack.md
@@ -6,6 +6,8 @@
 
 [Guides](https://webpack.js.org/guides)
 
+[Boilerplate](https://github.com/metagrover/ES6-boilerplate)
+
 ## Install
 
 make sure npm is initialized or packages.json is ready.
@@ -74,6 +76,22 @@ mode option in webpack.config.js file.
 If the 'mode' option is not set, webpack will fallback to 'production' for this value.
 
 use `webpack.development.config.js` or `webpack.production.config.js` for building in different environments.
+
+## package.json
+
+you can create npm script for webpack.
+
+```json
+"scripts": {
+"start": "webpack-dev-server --hot --inline",
+"watch": "webpack -w -d",
+"build": "webpack -p"
+},
+```
+
+`npm start` to run a dev server at localhost:8080 and watch for recompile on changes.
+`npm run watch` to only watch for/recompile on changes on your own web-server.
+`npm run build` to generate a minified, production-ready build.
 
 ## Loaders
 
