--- a/_drafts/2017-09-01-NPM.md
+++ b/_drafts/2017-09-01-NPM.md
@@ -39,6 +39,8 @@ init
 
 `npm init -yes` will not prompt for options and use the defaults.
 
+`npm audit fix` and `npm audit`
+
 ### Install
 
 `npm install --save-dev browserify`
