--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -26,7 +26,7 @@ Check the current version
 
 `node -v`
 
-### REPL
+### REPL Read-Evaluate-Print-Loop
 
 [repl](https://devdocs.io/node/repl)
 
@@ -34,9 +34,22 @@ Check the current version
 
 `process.exit(0)`
 
+<https://nodejs.org/api/process.html#process_exit_codes>
+
+Special command starts with .
+
+- .help
+- .editor, Ctrl+D to run
+- .clear
+- .load
+- .save
+- .exit
+
 ## modules
 
 [modules](https://devdocs.io/node/modules)
+
+<https://nodejs.org/api/modules.html>
 
 ### exports
 
