--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -9,18 +9,16 @@ tags: [nodejs]
 
 # How to Use nodeJS
 
-Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine.
-
-With the advent of Node.js, JavaScript turns to a programming language from a script language which is not running inside a browser anymore.
+Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine. With the advent of Node.js, JavaScript turns to a programming language from a script language which is not running inside a browser anymore.
 
 The Node.js project was initially released in 2009 as an open source, cross-platform runtime for developing server-side applications using JavaScript. It used Google's open source V8 engine to interpret JavaScript and added APIs for accessing the filesystem, creating servers, and
 loading code from external modules.
 
 Node comes bundled with a package manager called npm, which makes it easy to reuse more than 250,000 libraries available in its registry as of 2018.
 
-## Commands
+## Command-line Interface (CLI)
 
-[cli](https://devdocs.io/node/cli)
+[node cli](https://devdocs.io/node/cli)
 
 Check the current version
 
@@ -32,9 +30,7 @@ Check the current version
 
 `node`
 
-`process.exit(0)`
-
-<https://nodejs.org/api/process.html#process_exit_codes>
+`.exit` or `process.exit(0)` <https://nodejs.org/api/process.html#process_exit_codes>
 
 Special command starts with .
 
@@ -42,7 +38,7 @@ Special command starts with .
 - .editor, Ctrl+D to run
 - .clear
 - .load
-- .save
+- .save fileName
 - .exit
 
 ## modules
