--- a/_drafts/2017-09-01-NPM.md
+++ b/_drafts/2017-09-01-NPM.md
@@ -12,16 +12,9 @@ The JavaScript ecosystem provides many great libraries and tools to make writing
 
 [npm trends](https://www.npmtrends.com/)
 
-## package.json
-
-`npm help json`
-
-[package.json](https://docs.npmjs.com/files/package.json)
-[using-a-package.json](https://docs.npmjs.com/getting-started/using-a-package.json)
-
 ## CLI
 
-`npm -v`
+[npm-cli-commands](https://devdocs.io/npm-cli-commands/)
 
 `npm help`
 
@@ -41,9 +34,24 @@ init
 
 `npm audit fix` and `npm audit`
 
-### Install
+## Package Management
 
-`npm install --save-dev browserify`
+### Install and update npm
+
+npm version and update
+`npm -v`
+
+`npm install npm@latest -g`
+
+### Install a package
+
+#### Environment
+
+The `--save-prod` and `--save-dev` install flags
+
+`--save-prod` is assumed by default.
+
+`npm install <package_name> --save-dev` for example, `npm install browserify --save-dev`
 
 -g global
 
@@ -66,6 +74,16 @@ Run `npm outdated`. There should not be any results.
 `npm update pug --save`
 
 ## uninstall
+
+## package.json
+
+`npm help json`
+
+[package.json](https://docs.npmjs.com/files/package.json)
+
+[using-a-package.json](https://docs.npmjs.com/getting-started/using-a-package.json)
+
+[package.json on devdocs](https://devdocs.io/npm-package-json/)
 
 ## npx
 
