--- a/_drafts/2017-09-01-NPM.md
+++ b/_drafts/2017-09-01-NPM.md
@@ -47,13 +47,9 @@ npm version and update
 
 #### Environment
 
-The `--save-prod` and `--save-dev` install flags
+##### prov vs dev
 
-`--save-prod` is assumed by default.
-
-`npm install <package_name> --save-dev` for example, `npm install browserify --save-dev`
-
--g global
+The `--save`, `--save-prod` and `--save-dev` install flags installs the package in prod or dev environment.
 
 --save-dev is used to save the package for development purpose. Example: unit tests, minification. devDependencies includes build tools such as Babel and webpack. Packages in the devDependencies section of package.json don't get installed when the NODE_ENV variable is set to production.
 
@@ -62,6 +58,48 @@ The `--save-prod` and `--save-dev` install flags
 -D is short for --save-dev and -S is short for --save
 
 [What is the difference between --save and --save-dev?](https://stackoverflow.com/questions/22891211/what-is-the-difference-between-save-and-save-dev)
+
+One difference is the dependencies and devDependencies section used in package.json.
+
+> Please do not put test harnesses or transpilers in your dependencies object. Use devDependencies for that purpose.
+
+A perfect example of this is: `npm install typescript --save-dev`
+
+In this case, you would want to have Typescript available for development, but once the app is deployed, it is no longer necessary, as all of the code has been transpiled to javascript. As such, it would make no sense to include it in the published app. Indeed, it would only take up space and increase download times.
+
+`--save` or `--save-prod` is assumed by default.
+
+To specify dev environment `npm install <package_name> --save-dev` for example, `npm install browserify --save-dev`
+
+`npm install moment --save`
+
+This would create a new value in your package.json
+
+```json
+"dependencies": {
+   ...
+   "moment": "^2.17.1"
+}
+```
+
+When you are developing, it really helps to use tools such as test suites and may need jasmine-core and karma. In this case you would use
+
+`npm install jasmine-core --save-dev`
+`npm install karma --save-dev`
+
+This would also create a new value in your package.json
+
+```json
+"devDependencies": {
+    ...
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+}
+```
+
+You do not need the test suite to run the app in its normal state, so it is a `--save-dev` type dependency, nothing more. You can see how if you do not understand what is really happening, it is a bit hard to imagine.
+
+-g global
 
 ### list the packages
 
