--- a/_drafts/2017-08-01-nodeJS.md
+++ b/_drafts/2017-08-01-nodeJS.md
@@ -9,12 +9,9 @@ tags: [nodejs]
 
 # How to Use nodeJS
 
-Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine. With the advent of Node.js, JavaScript turns to a programming language from a script language which is not running inside a browser anymore.
+The Node.js project was initially released in 2009 as an open source, cross-platform runtime for developing server-side applications using JavaScript. It used Google's open source V8 engine to interpret JavaScript and added APIs for accessing the filesystem, creating servers, and loading code from external modules.
 
-The Node.js project was initially released in 2009 as an open source, cross-platform runtime for developing server-side applications using JavaScript. It used Google's open source V8 engine to interpret JavaScript and added APIs for accessing the filesystem, creating servers, and
-loading code from external modules.
-
-Node comes bundled with a package manager called npm, which makes it easy to reuse more than 250,000 libraries available in its registry as of 2018.
+Node comes bundled with a package manager called npm, which makes it easy to reuse more than 250,000 libraries available in its registry as of 2018. With the advent of Node.js, JavaScript turns to a programming language from a script language. HTTP is a first-class citizen in Node.js, so Node.js well suited for the foundation of a web library or framework for MEAN stack, MERN stack, JAMstack, etc.,
 
 ## Command-line Interface (CLI)
 
